# jirapi

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
.claude/: settings.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  claude-code.yml  claude-issue-code.yml  claude-issue-triage.yml  claude-pull_request-code_review.yml
docs/: jira-cloud-api-openapi.json
jirapi/: __init__.py  _base_client.py  _resource.py  _types.py  client.py  exceptions.py  pagination.py
jirapi/announcement_banner/: __init__.py  _resource.py
jirapi/app_data_policies/: __init__.py  _resource.py
jirapi/app_migration/: __init__.py  _resource.py
jirapi/app_properties/: __init__.py  _resource.py
jirapi/application_roles/: __init__.py  _resource.py
jirapi/audit_records/: __init__.py  _resource.py
jirapi/avatars/: __init__.py  _resource.py
jirapi/classification_levels/: __init__.py  _resource.py
jirapi/connect_migration/: __init__.py  _resource.py
jirapi/dashboards/: __init__.py  _resource.py
jirapi/dynamic_modules/: __init__.py  _resource.py
jirapi/fields/: __init__.py  _resource.py  custom_field_associations.py  custom_field_config_apps.py  custom_field_contexts.py  custom_field_options.py  custom_field_options_apps.py  custom_field_values_apps.py
jirapi/filters/: __init__.py  _resource.py
jirapi/groups/: __init__.py  _resource.py
jirapi/issue_link_types/: __init__.py  _resource.py
jirapi/issue_types/: __init__.py  _resource.py
jirapi/issues/: __init__.py  _resource.py  attachments.py  comment_properties.py  comments.py  links.py  properties.py  remote_links.py  votes.py  watchers.py  worklog_properties.py  worklogs.py
jirapi/jira_expressions/: __init__.py  _resource.py
jirapi/jql/: __init__.py  _resource.py
jirapi/labels/: __init__.py  _resource.py
jirapi/license_metrics/: __init__.py  _resource.py
jirapi/models/: __init__.py  _shared.py  announcement_banner.py  app_data_policies.py  app_migration.py  audit_records.py  avatars.py  connect_migration.py  dashboards.py  dynamic_modules.py  fields.py  filters.py  groups.py  issue_link_types.py  issue_types.py  issues.py  jira_expressions.py  jql.py  labels.py  license_metrics.py  notification_schemes.py  permissions.py  plans.py  priorities.py  projects.py  resolutions.py  screens.py  security_schemes.py  server_info.py  service_registry.py  settings.py  statuses.py  time_tracking.py  ui_modifications.py  users.py  webhooks.py  workflows.py
jirapi/notification_schemes/: __init__.py  _resource.py
jirapi/permissions/: __init__.py  _resource.py
jirapi/plans/: __init__.py  _resource.py  teams.py
jirapi/priorities/: __init__.py  _resource.py
jirapi/projects/: __init__.py  _resource.py  avatars.py  categories.py  components.py  permission_schemes.py  properties.py  roles.py  templates.py  types.py  versions.py
jirapi/resolutions/: __init__.py  _resource.py
jirapi/resources/: __init__.py  announcement_banner.py  app_data_policies.py  app_migration.py  app_properties.py  application_roles.py  audit_records.py  avatars.py  classification_levels.py  dashboards.py  dynamic_modules.py  field_schemes.py  filter_sharing.py  filters.py  group_and_user_picker.py  groups.py  issue_attachments.py  issue_bulk_operations.py  issue_comment_properties.py  issue_comments.py  issue_custom_field_associations.py  issue_custom_field_configuration_apps.py  issue_custom_field_contexts.py  issue_custom_field_options.py  issue_custom_field_options_apps.py  issue_custom_field_values_apps.py  issue_fields.py  issue_link_types.py  issue_links.py  issue_navigator_settings.py  issue_notification_schemes.py  issue_priorities.py  issue_properties.py  issue_redaction.py  issue_remote_links.py  issue_resolutions.py  issue_search.py  issue_security_level.py  issue_security_schemes.py  issue_type_properties.py  (+58 more)
jirapi/screens/: __init__.py  _resource.py  issue_type_screen_schemes.py  schemes.py  tab_fields.py  tabs.py
jirapi/security_schemes/: __init__.py  _resource.py
jirapi/server_info/: __init__.py  _resource.py
jirapi/service_registry/: __init__.py  _resource.py
jirapi/settings/: __init__.py  _resource.py
jirapi/statuses/: __init__.py  _resource.py
jirapi/tasks/: __init__.py  _resource.py
jirapi/time_tracking/: __init__.py  _resource.py
jirapi/ui_modifications/: __init__.py  _resource.py
jirapi/users/: __init__.py  _resource.py  properties.py
jirapi/webhooks/: __init__.py  _resource.py
jirapi/workflows/: __init__.py  _resource.py  scheme_drafts.py  scheme_project_associations.py  schemes.py  status_categories.py  statuses.py  transition_rules.py
scripts/: generate_models.py  generate_resources.py
tests/: __init__.py
tests/unit/: __init__.py  conftest.py  test_base_client.py  test_exceptions.py  test_models.py  test_pagination.py  test_status_categories.py
tests/unit/test_resources/: __init__.py  test_issues.py  test_primitive_returns.py  test_projects.py  test_sub_resources.py
