[project]
name = "jirapi"
version = "0.1.0"
description = "Modern Python Jira client — sync and async — powered by HTTPX"
authors = [{ name = "Brett Fitzpatrick", email = "brettfitz@protonmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["jira", "httpx", "async", "atlassian", "jira-api", "rest-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/brett-fitz/jirapi"
Documentation = "https://github.com/brett-fitz/jirapi#readme"
Repository = "https://github.com/brett-fitz/jirapi"
Issues = "https://github.com/brett-fitz/jirapi/issues"
Changelog = "https://github.com/brett-fitz/jirapi/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.15.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "D",      # pydocstyle
]
ignore = [
    "D205",   # false positives on multi-line summary
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
lines-after-imports = 2
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
markers = [
    "integration: marks tests as integration tests requiring live API access",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["jirapi"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
