[project]
name = "jirapi"
version = "0.4.0"
description = "Modern Python Jira client — sync and async — powered by HTTPX"
authors = [{ name = "Brett Fitzpatrick", email = "brettfitz@protonmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["jira", "httpx", "async", "atlassian", "jira-api", "rest-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/brett-fitz/jirapi"
Documentation = "https://github.com/brett-fitz/jirapi#readme"
Repository = "https://github.com/brett-fitz/jirapi"
Issues = "https://github.com/brett-fitz/jirapi/issues"
Changelog = "https://github.com/brett-fitz/jirapi/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "D",      # pydocstyle
]
ignore = [
    "D205",   # false positives on multi-line summary
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
lines-after-imports = 2
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]
"jirapi/models/__init__.py" = ["D100", "D104", "E501", "F403", "F405"]
"jirapi/models/_shared.py" = ["D100", "D101", "D104", "E501", "F821"]
"jirapi/models/[!_]*.py" = ["D100", "D101", "D104", "E501", "F821"]
"jirapi/client.py" = ["D102"]
"scripts/**" = ["D103"]
# Generated resource packages: jirapi/<group>/_resource.py + sub-resource files
"jirapi/*/_resource.py" = ["D100", "D101", "D102", "D104", "D415", "F401", "F841"]
"jirapi/*/[!_]*.py" = ["D100", "D101", "D102", "D104", "D415", "F401", "F841"]
"jirapi/*/__init__.py" = ["D100", "D104"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
markers = [
    "integration: marks tests as integration tests requiring live API access",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["jirapi"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

# ---------------------------------------------------------------------------
# ty
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# Auto-generated model files use a runtime namespace-injection pattern so that
# Pydantic can resolve cross-module forward references at validation time.
# ty cannot see those injected names statically, so the rule produces false
# positives on all generated model submodules.
unresolved-reference = "warn"

# Generated resource classes expose a public `list()` method which shadows the
# built-in `list` type within that class scope.  ty therefore rejects
# `list[str]` annotations on other methods in the same class as an invalid
# type expression.  Downgrade to a warning until the generator is updated.
invalid-type-form = "warn"
